fix: fix shop the look spillage

--- a/assets/base.css
+++ b/assets/base.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --tw-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --tw-color-red-300: oklch(80.8% 0.114 19.571);
     --tw-color-red-700: oklch(50.5% 0.213 27.518);
     --tw-color-yellow-500: oklch(79.5% 0.184 86.047);
     --tw-color-slate-200: oklch(92.9% 0.013 255.508);
@@ -351,8 +352,17 @@
   .tw\:min-h-\[4rem\] {
     min-height: 4rem !important;
   }
+  .tw\:w-1\/2 {
+    width: calc(1/2 * 100%) !important;
+  }
+  .tw\:w-24 {
+    width: calc(var(--tw-spacing) * 24) !important;
+  }
   .tw\:w-30 {
     width: calc(var(--tw-spacing) * 30) !important;
+  }
+  .tw\:w-32 {
+    width: calc(var(--tw-spacing) * 32) !important;
   }
   .tw\:w-66 {
     width: calc(var(--tw-spacing) * 66) !important;
@@ -410,6 +420,9 @@
   }
   .tw\:flex-1 {
     flex: 1 !important;
+  }
+  .tw\:flex-1\/2 {
+    flex: calc(1/2 * 100%) !important;
   }
   .tw\:shrink-0 {
     flex-shrink: 0 !important;
@@ -528,6 +541,9 @@
   }
   .tw\:border-black {
     border-color: var(--tw-color-black) !important;
+  }
+  .tw\:bg-red-300 {
+    background-color: var(--tw-color-red-300) !important;
   }
   .tw\:bg-red-700 {
     background-color: var(--tw-color-red-700) !important;
